# OTUS_5

./: .gitignore  Dockerfile  README.md  __init__.py  alembic.ini  app.py  config.py  create_fastapi_app.py  docker-compose.yaml  jsonplaceholder_requests.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_04_23_2257-b3f70a228d57_initial_migration.py  2025_04_23_2259-dc058e680857_initial_migration.py
api/: __init__.py
api/posts/: crud.py  dependencies.py  views.py
api/users/: views.py
blog-app/: .env.template  config.py  main.py
blog-app/api/posts/: __init__.py  crud.py  dependencies.py  views.py
blog-app/api/users/: __init__.py  crud.py  dependencies.py
blog-app/models/: base.py  db.py  user.py
blog-app/schemas/: __init__.py  post.py
blog_app/: .env.template  app.py  create_fastapi_app.py  entrypoint.sh
blog_app/api/: __init__.py
blog_app/api/posts/: __init__.py  crud.py  dependencies.py  views.py
blog_app/api/users/: __init__.py  crud.py  dependencies.py  views.py
blog_app/models/: __init__.py  base.py  db.py  post.py  user.py
blog_app/schemas/: __init__.py  post.py  user.py
models/: __init__.py  base.py  db.py  post.py
schemas/: __init__.py  post.py
